<resources>
    <string name="app_name">Football Matching</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="next_step">Next Step</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_required">Email *</string>
    <string name="password_required">Password *</string>
    <string name="confirm_password_required">Confirm Password *</string>
    <string name="register">Register</string>
    <string name="full_name_required">Full Name *</string>
    <string name="register_note">You will finish the rest of your profile later!</string>
    <string name="loading">Loading…</string>
    <string name="avatar">Avatar</string>
    <string name="full_name">Full Name</string>
    <string name="edit_photo">Edit avatar</string>
    <string name="personal_details">Personal Details</string>
    <string name="edit">Edit</string>
    <string name="introduction">Introduction</string>
    <string name="specs">Specs</string>
    <string name="preferred_positions">Preferred Positions</string>
    <string name="forward_attacker">Forward Attacker</string>
    <string name="centre_attacker">Centre Attacker</string>
    <string name="defender">Defender</string>
    <string name="attacking_midfielder">Attacking Midfielder</string>
    <string name="centre_midfielder">Centre Midfielder</string>
    <string name="defensive_midfielder">Defensive Midfielder</string>
    <string name="goalkeeper">Goalkeeper</string>
    <string name="joined">Joined</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthday">Birthday</string>
    <string name="telephone">Telephone</string>
    <string name="address">Address</string>
    <string name="confirm">Confirm</string>
    <string name="reset">Reset</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="promote_introduction">Write something about yourself!</string>
    <string name="edit_personal_details">Edit Personal Details</string>
    <string name="edit_details">Edit Details</string>
    <string name="edit_introduction">Edit Introduction</string>
    <string name="edit_specs">Edit Specs</string>
    <string name="player_profile">Player Profile</string>
    <string name="edit_preferred_position">Edit Positions</string>
    <string name="photos">Photos</string>
    <string name="team_name">Team Name</string>
    <string name="create_team">Create Team</string>
    <string name="cancel">Cancel</string>
    <string name="basic_information">Basic Information</string>
    <string name="team_details">Team Details</string>
    <string name="find_me_on">Find Me On</string>
    <string name="skills">Skills</string>
    <string name="fair_play">Fair Play</string>
    <string name="wins">Wins</string>
    <string name="losses">Losses</string>
    <string name="team_members">Team Members</string>
    <string name="user_type">User Type</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logging_in">Logging in…</string>
    <string name="login_failed">Login failed</string>
    <string name="welcome">Welcome </string>
    <string name="invalid_email">Not an email address</string>
    <string name="invalid_password_length">Passwords must have at least 6 characters</string>
    <string name="unknown_error">Unknown error, try again later!</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="updating_information">Updating information…</string>
    <string name="back">Back</string>
    <string name="height_centimeter">Height (cm)</string>
    <string name="weight_gram">Weight (g)</string>
    <string name="manage">Manage</string>
    <string name="promote_team_introduction">Write something about your team</string>
    <string name="team">Team</string>
    <string name="my_teams">My Teams</string>
    <string name="creating_team">Creating team...</string>
    <string name="match_history">Match History</string>
    <string name="find_team">Find Team</string>
    <string name="player">Player</string>
    <string name="registering">Registering...</string>
</resources>