<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.svmc.footballMatching.ui.personalProfile.EditPlayerPreferredPositionsViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:padding="10dp"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/forward_attacker_check_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.playerLiveData.forwardAttacker}"
                    android:text="@string/forward_attacker" />

                <CheckBox
                    android:id="@+id/centre_attacker_check_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.playerLiveData.centreAttacker}"
                    android:text="@string/centre_attacker" />

                <CheckBox
                    android:id="@+id/defender_check_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.playerLiveData.defender}"
                    android:text="@string/defender" />

                <CheckBox
                    android:id="@+id/attacking_midfielder_check_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.playerLiveData.attackingMidfielder}"
                    android:text="@string/attacking_midfielder" />

                <CheckBox
                    android:id="@+id/centre_midfielder_check_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.playerLiveData.centreMidfielder}"
                    android:text="@string/centre_midfielder" />

                <CheckBox
                    android:id="@+id/defensive_midfielder_check_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.playerLiveData.defensiveMidfielder}"
                    android:text="@string/defensive_midfielder" />

                <CheckBox
                    android:id="@+id/goalkeeper_check_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.playerLiveData.goalkeeper}"
                    android:text="@string/goalkeeper" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="start|center_vertical"
                        android:maxLines="1"
                        android:text="@string/edit_preferred_position"
                        android:textColor="@android:color/white"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent" />

                    <ImageButton
                        android:id="@+id/reset_image_button"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="?android:attr/selectableItemBackground"
                        android:paddingHorizontal="16dp"
                        android:src="@drawable/ic_baseline_replay_white_24" />

                    <ImageButton
                        android:id="@+id/confirm_image_button"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="?android:attr/selectableItemBackground"
                        android:paddingHorizontal="16dp"
                        android:src="@drawable/ic_baseline_check_white_24" />

                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>