<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.svmc.footballMatching.ui.personalProfile.EditPersonalBasicInformationViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:padding="10dp"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    app:helperText=" ">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/full_name_text_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPersonName"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:text="@{viewModel.userLiveData.fullName}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/birthday_text_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/birthday"
                    app:endIconDrawable="@drawable/ic_baseline_today_24"
                    app:endIconMode="custom"
                    app:helperText=" ">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/birthday_text_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:focusable="false"
                        android:inputType="textNoSuggestions"
                        android:maxLines="1"
                        android:text="@{viewModel.userLiveData.birthdayString}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telephone"
                    app:helperText=" ">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/telephone_text_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="phone"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:text="@{viewModel.userLiveData.phone}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    app:helperText=" ">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/address_text_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:maxLength="256"
                        android:maxLines="1"
                        android:text="@{viewModel.userLiveData.address}" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="start|center_vertical"
                        android:maxLines="1"
                        android:text="@string/edit_details"
                        android:textColor="@android:color/white"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent" />

                    <ImageButton
                        android:id="@+id/reset_image_button"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="?android:attr/selectableItemBackground"
                        android:contentDescription="@string/reset"
                        android:paddingHorizontal="16dp"
                        android:src="@drawable/ic_baseline_replay_white_24" />

                    <ImageButton
                        android:id="@+id/confirm_image_button"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="?android:attr/selectableItemBackground"
                        android:contentDescription="@string/confirm"
                        android:paddingHorizontal="16dp"
                        android:src="@drawable/ic_baseline_check_white_24" />

                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>