<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.svmc.footballMatching.ui.account.LoginViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.MainActivity">

                <ImageView
                    android:id="@+id/app_icon_image_view"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/main_logo"
                    app:layout_constraintBottom_toTopOf="@id/email_text_input_layout"
                    app:layout_constraintDimensionRatio="h,1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.3"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintWidth_percent="0.5" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_text_input_layout"
                    style="@style/LoginFormTextField"
                    android:layout_marginTop="50dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/app_icon_image_view"
                    app:startIconDrawable="@drawable/ic_outline_email_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_text_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:afterTextChanged="@{viewModel.emailChanged}"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_text_input_layout"
                    style="@style/LoginFormTextField"
                    app:layout_constraintBottom_toTopOf="@id/login_button"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email_text_input_layout"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/ic_outline_lock_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_text_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:afterTextChanged="@{viewModel.passwordChanged}"
                        android:hint="@string/password"
                        android:imeActionLabel="@string/login"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_button"
                    style="@style/MyButton"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:enabled="@{viewModel.dataValidLiveData}"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password_text_input_layout"
                    app:layout_constraintWidth_percent="0.9" />

                <TextView
                    android:id="@+id/create_account_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="start"
                    android:padding="10dp"
                    android:text="@string/create_account"
                    android:textColor="@android:color/white"
                    android:background="?android:attr/selectableItemBackground"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login_button"
                    app:layout_constraintVertical_bias="1" />

                <TextView
                    android:id="@+id/forgot_password_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="end"
                    android:padding="10dp"
                    android:text="@string/forgot_password"
                    android:textColor="@android:color/white"
                    android:background="?android:attr/selectableItemBackground"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login_button"
                    app:layout_constraintVertical_bias="1" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_anchor="@+id/nestedScrollView"
            app:layout_anchorGravity="center" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>